<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_to_main_activity"
            android:onClick="Start"/>

        <ImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/marshmello"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/todo" />

        <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="50dp"
        android:text="@string/marshmello"
        android:textSize="40sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/zedd"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/zedd"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/zeddtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="50dp"
            android:text="@string/zedd"
            android:textSize="40sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:src="@drawable/deadmau5"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:layout_alignParentEnd="true"
        android:text="@string/deadmau5"/>
    </RelativeLayout>

</android.support.v7.widget.CardView>